kube/capitale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capitale
  labels:
    app: capitale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capitale
  template:
    metadata:
      labels:
        app: capitale
    spec:
      containers:
      - name: capitale
        image: kingbrady/capitale:2.0.0
        ports:
        - containerPort: 80
