kube/capitale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  labels:
    app.kubernetes.io/instance: capitale
    app.kubernetes.io/name: capitale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: capitale
  namespace: capitale
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - capitale.kak.im
      secretName: capitale-tls
  rules:
  - host: capitale.kak.im
    http:
      paths:
      - backend:
          service:
            name: capitale
            port:
              number: 80
        path: /
        pathType: Prefix
